public/less/style.less
@import "variables.less";
@import "mixins.less";
@import "bs3-mixins.less";

body, html {
	margin: 0;
	padding: 0;
	height: 100%;
}
.wrapper {
	min-height: 100%;
	position: relative;
}
main {
	padding-bottom: 225px;
}
footer {
	width: 100%;
	height: 225px;
	position: absolute;
	bottom: 0;
	left: 0;
}

body {
	padding-top: 0 !important;

	background: @color-bg !important;
	color: @color-dark;
}

#nav-main {
	margin-bottom: @spacing !important;

	.navbar-header {
		.navbar-brand {
			line-height: 20px;

			font-family: @font-headings;
			font-weight: bold;
			color: @color-white;
			text-shadow: 0 1px 3px rgba(0, 0, 0, .35);
			font-size: 50px;
			letter-spacing: .75px;
		}
	}

	.navbar-nav {
		a {
			color: rgba(255, 255, 255, .65);
			font-size: 24px;
			font-weight: 700;
			font-style: italic;

			&:hover {
				color: @color-white;
				text-shadow: 0 1px 3px rgba(0, 0, 0, .3);
			}
		}
	}

	.dropdown-menu>li>a {
		font-family: @font-primary;
		font-size: @font-size !important;
		font-weight: normal;
		font-style: normal;
		color: @color-dark;

		&:hover {
			color: @color-gray-dark;
			text-shadow: 0 0 0 rgba(0, 0, 0, 0);
		}
	}
}

main {
	h1, h2, h3, h4 {
		margin: 0 0 18px 0;

		font-weight: 700;
	}
	
	h1 {
		font-family: @font-headings;
		color: @color-red;
		font-weight: bold;
		font-size: 36px;
	}
	
	h2 {
		color: @color-green;
		font-weight: 400;
		font-size: 28px;
	}
}

footer {
	padding: @spacing-lg 0;
	line-height: 1.75;

	background: #333;
	color: rgba(255, 255, 255, .75);
	font-size: @font-size-sm;

	h4, h5 {
		margin-top: 0;

		color: @color-white;
	}
}

.btn {
	font-weight: 700;
	font-style: italic;
	letter-spacing: .75px;

	.rounded(42px);
}

.btn-toolbar {
	margin: @spacing 0;
}

hr {
	height: 1px;

	border-color: @color-bg;
	border-top: none;
	background-color: darken(@color-bg, 6.5%);
}

.data-table {
	margin: @spacing 0;
	
	> .row {
		margin-left: 0;
		margin-right: 0;

		border-top: 1px solid @color-gray-light;

		p {
			margin: 10px 0;
		}
	}

	&.data-table-striped {
		> .row {
			&:nth-child(odd) {
				background: @color-subtle;
			}
		}
	}

	&.data-table-bordered {
		> .row {
			border-left: 1px solid @color-gray-light;
			border-right: 1px solid @color-gray-light;

			&:first-child {
				.border-radius(@border-radius, @border-radius, 0, 0);
			}

			&:last-child {
				border-bottom: 1px solid @color-gray-light;

				.border-radius(0, 0, @border-radius, @border-radius);
			}

			&:nth-child(1):nth-last-child(1) {
				border-bottom: 1px solid @color-gray-light;

				.rounded(@border-radius);
			}
		}
	}
}

form {
	.control-label {
		&.transparent {
			color: @color-bg !important;
		}
	}

	.checkbox-inline, .radio-inline {
		font-weight: 400;
		font-size: @font-size-sm;
	}

	.help-block {
		font-size: @font-size-sm;
	}
}

label {
	display: block;
	color: @color-gray-dark;

	&.transparent {
		color: transparent !important;
	}
}

.text-sm {
	font-size: @font-size-sm;
}
.text-success {
	color: darken(@color-green, 3%);

	&:hover {
		color: darken(@color-green, 3%);
	}
}
.text-danger {
	color: darken(@color-red, 3%);

	&:hover {
		color: darken(@color-red, 3%);
	}
}

.price, .price-sm {
	margin: 12px 0;

	font-size: 32px;
}
.price-sm {
	font-size: 20px;
}

.alert {
	h4 {
		margin-bottom: @spacing-sm;
	}
}

.nav-pills {
	margin-bottom: @spacing;
}

.bootcards-media {
	.panel-heading {
		.panel-title {
			color: @color-green;
			font-weight: 700;
			font-style: italic;
		}
	}
}

.picker__table {
	font-size: @font-size !important;
}
.picker--focused .picker__day--highlighted {
	color: @color-green !important;
}

.ui.toggle.checkbox label {
	font-size: @font-size-sm;
}
.ui.toggle.checkbox input:checked ~ .box, .ui.toggle.checkbox input:checked ~ label {
	color: darken(@color-green, 5%) !important;
}
.ui.toggle.checkbox input:checked ~ .box:before, .ui.toggle.checkbox input:checked ~ label:before {
	background-color: @color-green !important;
}

.ui.statistic {
	max-width: 300px;
	margin: 0 4em 2em 2em;

	>.value {
		font-family: @font-primary;
		font-weight: 400;
		color: @color-dark;
	}

	>.label {
		display: block;

		font-family: @font-primary;
		font-weight: 700;
		font-style: italic;
		font-size: @font-size !important;
	}
}

